--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,9 +1,20 @@
 ---
-layout: layouts/base.njk
-templateClass: tmpl-post
+layout: layouts/base-no-logo.njk
+templateClass: post-template
 ---
-<h1>{{ title }}</h1>
 
-{{ content | safe }}
+<article class="post">
 
-<p><a href="{{ '/' | url }}">← Home</a></p>
+  <div class="post-meta">
+    <time datetime="2019-01-01">01 Jan 2019</time>
+  </div>
+
+  <h1 class="post-title">
+    <span>{{ title }}</span>
+  </h1>
+
+  <section class="post-content">
+    {{ content | safe }}
+  </section>
+
+</article>
