--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -11,8 +11,13 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700|Droid+Serif:400,700|Pacifico' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="{{ '/style/styles.css' | url }}">
+    {# <link rel="stylesheet" href="{{ '/style/styles.css' | url }}"> #}
     <link rel="stylesheet" href="https://use.typekit.net/ooa0ozr.css">
+
+    {% set css %}
+      {% include "style/styles.css" %}
+    {% endset %}
+    <style>{{ css | cssmin | safe }}</style>
 
   </head>
   <body {% if templateClass %} class="{{ templateClass }}"{% endif %}>
