--- a/style/styles.css
+++ b/style/styles.css
@@ -1,24 +1,3 @@
-.kg-width-wide {
-  display: block;
-}
-
-.kg-width-full {
-  width: 100vw;
-  margin-left: calc(50% - 50vw);
-}
-
-.kg-gallery-container {
-  display: block;
-}
-
-.kg-gallery-row {
-  display: block;
-}
-
-.kg-gallery-image {
-  display: block;
-}
-
 h1,
 h2,
 h3,
@@ -127,7 +106,6 @@ a,
 }
 
 .main-nav ul {
-  /* list-style-type: none; */
   list-style: none;
   display: flex;
   padding: 0;
@@ -184,7 +162,8 @@ pre {
   border: 1px solid #eeeeee;
 }
 
-blockquote, pre {
+blockquote,
+pre {
   padding: 1em 1.4em;
 }
 
@@ -214,5 +193,5 @@ main {
 }
 
 .direct-link:hover {
-  opacity: 1.0;
+  opacity: 1;
 }
