--- a/style/styles.css
+++ b/style/styles.css
@@ -71,6 +71,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
   font-family: letter-gothic-std, monospace;
   font-size: 1.2rem;
   line-height: 1.6em;
@@ -84,6 +85,8 @@ header#site-head {
   padding: 0 16px;
   flex-basis: 80%;
   max-width: 680px;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 a,
