Updates the home link with the home staging URL.

--- a/home.njk
+++ b/home.njk
@@ -1,7 +1,7 @@
 ---
 eleventyNavigation:
   key: Home
-  url: https://www.chilij.com/
+  url: https://www.staging.chilij.com/
   order: 1
 permalink: false
 ---
