--- a/site/_includes/layouts/base.njk
+++ b/site/_includes/layouts/base.njk
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/ooa0ozr.css"/>
 
     {% set css %}
-      {% include "style/prism-ghcolors.css" %}
-      {% include "style/styles.css" %}
+      {% include "site/_style/prism-ghcolors.css" %}
+      {% include "site/_style/styles.css" %}
     {% endset %}
     <style>{{ css | cssmin | safe }}</style>
 
