Adds an end mark to all posts.

--- a/site/_includes/layouts/post.njk
+++ b/site/_includes/layouts/post.njk
@@ -18,3 +18,9 @@ templateClass: post-template
   </section>
 
 </article>
+
+<footer>
+  <div class="end-mark">
+    <img src="{{ '/images/lambda.svg' | url }}" alt="End Mark">
+  </div>
+</footer>
